--- a/VFF synopsis.qmd
+++ b/VFF synopsis.qmd
@@ -66,8 +66,58 @@ Hvordan kan løsningen implementeres i praksis, med deres nuværende datamodenhe
 ### Afgrænsning (osv.... \[\@sec-pf\] hvis du har brug for at referere til asnittet problemformulering)
 
 ## Videnskabsteori og metode
+Opgaven tager udgangspunkt i et kritisk realistisk paradigme, da tilskuerantallet påvirkes af underliggende mekanismer, og derfor skal opfattes som et observerbart fænomen. Kritisk realisme bygger fundamentalt på, at virkeligheden eksisterer uafhængigt af observatøren, med at vores erkendelse om, at viden om virkeligheden opnås gennem empiriske observationer, data og analytiske modeller. Tilskuerantallet estimeres på baggrund af valgte kvantitative variabler, som vejret, modstandere og helligdage, der fungerer som indikatorer for disse mekanismer. I forhold til ontologi, så skal tilskuerantallet ikke forstås som tilfældigt, da antallet bliver påvirket af vores tidligere nævnte variabler. Vi må dog antage, at der altid vil være underliggende mekanismer, som vi ikke kender, som alligevel kan have betydning for antallet af tilskuere.
+I forhold til epistemologi har vi opnået viden empirisk ved at analysere historiske data om tilskuertal og kamprelaterede faktorer ved hjælp af machine learning-modeller, som identificerer statistiske mønstre og sammenhænge.
+Metodologisk anvender vi en kvantitativ tilgang baseret på sekundære data. De anvendte machine learning-modeller er bygget op på et positivistisk videnskabssyn, ved at de har til formål at identificere statistiske sammenhænge mellem inputvariable og tilskuerantal. Inden for en kritisk realistisk ramme forstås modellerne imidlertid primært som redskaber til at indikere, frem for at forklare de underliggende mekanismer.
+
+
+Undersøgelsesdesignet er i opgaven overvejende deduktiv, da eksisterende machine learning-teori anvendes til at teste forskellige modellers præstation. Samtidig indgår der også abduktive elementer, hvor resultaterne anvendes til justering af variabelvalg, og fortolkning af mulige mekanismer. Vores data består primært af kvantitative data, såsom tilskuerantal og kamprelaterede variable, men inkluderer også kvalitative data fra et interview med Viborg FF, som bidrager til forståelsen af bagvedliggende mekanismer.
+Der er altså inddraget regressionsbaserede machine learning-modeller, som er effektive til forudsigelse af en numerisk variabel. Modellernes præstation vurderes ved hjælp af MSE, RMSE og R² på opdelte trænings- og testdatasæt. Validiteten styrkes ved test på ukendte data, mens reliabiliteten understøttes af en ensartet og reproducerbar analyseproces. Resultaterne er i væsentlig grad afhængige af datakvaliteten og de tilgængelige variabler, hvilket fremhæver betydningen af systematisk dataforberedelse.
 
 ## Analyse
+#industri
+Superligaklubber opererer indenfor den professionelle danske fodbold industri, som er integreret i den bredere danske oplevelse- og underholdningsindustri(Palle). Den primære kerneydelse er afvikling af fodboldkamp. Her sker værdiskabelsen gennem underliggende mekanismer knyttet til komplementære serviceydelser, som forplejning, faciliteter og øvrige tilknyttede tilbud.
+
+Industriens geografiske omfang er primært lokalt og regionalt, idet Viborg FF konkurrerer i den danske Superliga og dermed er underlagt Det Danske Klublicenssystem, som regulerer turneringsstrukturer, licenskrav og de økonomiske vilkår. 
+
+#branche
+Viborg FF er registreret under NACE-branchen: 931200 Drift af sportsklubber (https://www.proff.dk/firma/viborg-ff-prof-fodbold-as/viborg/idr%C3%A6tforeninger-og-klubber/GKYJDXI10O5). I denne branche består aktørerne af kommercielle organisationer som opererer med professionel sport, specifikt elitefodbold. Klubbernes kerneydelser er at levere sportslige oplevelser, og de fungerer derfor hovedsageligt til forbrugere og samarbejdspartnere.
+
+#Markedet:
+Markedet for professionel elitefodbold henvender sig til et differentieret marked, som består af både et B2C og et B2B. B2C-markedet består primært af lokale og regionale fans, familier, unge og fodboldinteresserede, som søger underholdning og fællesskab(palle). Her spiller loyalitet og emotionel tilknytning en central rolle ved værdiskabelsen. På B2B markedet henvender organisationen til kunderne gennem sponsorater, netværksarrangementer og komplementære ydelser, som leje af skybox og VIP-oplevelser. 
+
+#Konklusion:
+På tværs af industriens strukturelle rammer, branchens karakteristika og markedets segmenter fremstår Viborg FF’s tilskuertal som tæt forbundet med klubbens evne til at forstå og imødekomme sine kunder. I den professionelle fodbold industri skabes værdien ikke alene gennem afviklingen af kampene, men gennem de komplementære serviceydelser, der præger den samlede oplevelse. Som aktør i NACE‑branchen for drift af sportsklubber leverer Viborg FF sportslige oplevelser til både forbrugere og samarbejdspartnere, hvilket gør publikums engagement centralt for klubbens drift. Markedets opdeling i B2C‑fans og B2B‑erhvervspartnere viser, at efterspørgslen formes af både emotionelle, sociale og kommercielle mekanismer. På denne baggrund bliver viden om tilskuertal væsentlig for klubbens planlægning og værdiskabelse, da den understøtter en mere målrettet indsats over for de segmenter, der udgør fundamentet for Viborg FF’s aktiviteter.
+
+Y-akse: Kompetitivt scope: bred eller smal industri
+X-akse: Konkurrencemæssig fordel: Lave omkostninger eller unikhed
+Kigger man på produktniveau så kigger man på flere forskellige muligheder
+De 2 vigtige p’er for at møde markedsstandarden:
+
+#2 - Differentiering:
+Viborg FF differentierer sig over et bredt publikum gennem sine kerneprodukter, herunder:
+
+Hjemmekampe
+billettyper
+Abonnementsøsninger
+Merchandise
+
+Disse produkter differentieres gennem oplevelse, klub, identitet og kundeforhold, hvor loyalitet og gentagne køb understøttes af komplementerende produkter og services. Differentieringen gør det muligt at øge den oplevede værdi for fans og dermed skabe højere skifteomkostninger sammenlignet med substitutter som anden underholdning.
+3a Omkostningsfokus:
+Viborg FF anvender omkostningsfokus på udvalgte produkter rettet mod specifikke segmenter, herunder:
+Forplejning under events
+
+Her er fokus på effektiv drift og marginoptimering snarere end unikhed. Produkterne skal leve op til markedsstandarden, men konkurrerer primært på pris og omkostningskontrol indenfor et afgrænset segment.
+
+#Hvilke business units bør de investere i?
+For Viborg FF er der forretningsområder, som gør det oplagt at investere i forbindelse med vores nye dataværktøj, hvor præcise prognoser for tilskuerantallet kan anvendes i deres beslutningsprocesser og i den daglige drift. Investeringer på selve kampdagene samt større investeringer i salg og marketing kan gøres mere fordelagtige, da Viborg FF med dataværktøjet kan minimere ressourceforbruget og markedsføre sig mere aggressivt ved kampe, hvor prognosen indikerer, at der forventes et lavt tilskuertal. 
+
+#Datamodenhed og datagovernance
+Viborg FF befinder sig aktuelt på fase 2 i Gartner’s Data Governance Maturity Model, hvilket karakteriseres som et stadie, hvor organisationen har erkendt behovet for en mere struktureret og systematisk tilgang til datahåndtering. På dette niveau er Viborg FF i færd med at etablere grundlæggende datainitiativer, herunder implementeringen af Power BI som et centralt værktøj til at øge data tilgængeligheden på tværs af afdelinger. Dette initiativ repræsenterer et vigtigt skridt mod at skabe en mere transparent og data informeret beslutningskultur. For at kunne fuldføre fase 2 er det imidlertid nødvendigt, at klubben sikrer, at alle relevante afdelinger får adgang til de udviklede dashboards, samt at der etableres en formaliseret data governance-struktur, der understøtter datakvalitet, ejerskab og standardiserede processer.
+
+Denne placering i fase 2 afspejler Viborg FF’s generelle niveau af dataindsats. Organisationen er i stand til at anvende data til at identificere mønstre, sammenhænge og adfærd, men data anvendes endnu primært deskriptivt og ikke strategisk på tværs af forretningsområder. Det næste udviklingsmæssige skridt vil derfor være at bevæge sig mod fase 3, hvor data i højere grad anvendes til at styrke konkurrenceevnen gennem strategisk beslutningsstøtte og værdiskabende analyser.
+
+#analyse af modellerne
 
 ## Væsentligste konklusioner
 
@@ -251,7 +301,7 @@ nedbør_7t <- function(dt) {
   values <- js$features$properties$value
   
   # Udskriver status i konsollen.
-  message("Henter 7-timers nedbør for:", format(dt, "%Y-%m-%d %H:%M"), "\n")
+  message("Henter 7-timers nedbør for:", format(dt, "%Y-%m-%d %H:%M"), "\n") 
   
   # Summerer nedbør over perioden (NA ignoreres).
   sum(values, na.rm = TRUE)
