--- a/VFF synopsis.qmd
+++ b/VFF synopsis.qmd
@@ -2401,7 +2401,7 @@ Og dem her, de bliver stille og roligt facet ud, altså vi sælger ikke mere, me
 og vi har Midtjylland, den 7 i 12. Hvis man kigger på tallene hernede, med hvad vi ønsker at opnå, så er det faktisk sådan, i forhold til pladserne på stadion, når vi siger 75%, og I er så skarpe, så 75% af 10.000, det kan vi godt regne ud af alle sammen, hvad det er, så det er egentlig næsten udsolgt, når vi siger 7.200, der skal fremmøde, fordi vi er med på, at vi har kun en fremmødeprocent på 75%, hvorimod til Midtjylland, der går vi op og regner med en fremadprocent på 85%, så der vi kan få 8.500, og så har vi nok en overpræstering den dag, der gør, at vi kan komme lidt højere op. Men her kan I se, hvordan vi forsøger at målrette ud i de forskellige afsnit på stadion, med 100 stykkes i vores Skybox, 100 stykkes i vores Scandu's Clowns, 720 stykkes i vores BDO, samlet 1.150 i VIP-afsnittet, 2.000 partner billetter, 2.500 på Øst tribunen, 1.500 på Syd tribunen, og 300 i Udebanesafsnittet.
 Så det sætter vi op på målsætningsbasis, og det følger vi. Vi følger de tal, vi følger op på, hvordan det ser ud i de enkelte afsnit, og vi prøver at give et lidt på, hvad er det for nogle mennesker, der møder en specielt, herovre på vores Øst tribune og Syd tribune, og i udebaneafsnittet. Så det forsøger vi at følge ret godt.
 Så var der det her med brugsgrader. Her har vi vores forskellige produkter. Vi har vores billetsalg.
-Det ligger rigelig pænt med 92% benyttelse. Og det er jo selvfølgelig, fordi det er her, du går ind og køber en billet, så selvfølgelig møder du frem, når du har betalt 150 kroner, eller hvad det er. Og hvorfor er den så ikke højere end 92? Det er fordi, vi også laver nogle aktiveringer.
+Det ligger rigelig pænt med 92% benyttelse. Og det er jo selvfølgelig, fordi det er her, du går ind og køber en billet, så selvfølgelig møder du frem, når du har betalt 150 kroner, eller hvad det er. Og hvorfor er den så ikke højere end 92? Det er fordi, vi også laver nogle aktiveringer
 For eksempel så laver vi en aula aktivering til alle folkeskolerne, at de kan hente gratis billetter til en af vores kampe, hvor vi ikke forventer så højt et tilskuertal på. Og der er vi godt klar over, at når vi laver gratis billetter ved Aula, så ligger vi måske nede på 65% i fremmøde. Så det er derfor, at den ikke er højere.
 Så kan I tage vores erhvervsklub. De har taget et kæmpe hop. Og det er meget tydeligt på, at vi konkret går ind og arbejder med tingene.
 Hvor her i de første år, altså i min første tid, der var der ikke så stor fokus på, rent faktisk om de produkter, de havde, og om de blev benyttet eller ej. Og så kan man se, at man tager fat i det, og begynder at kommunikere med det, og stiller krav om, hvad man gør. For eksempel erhvervsklubben, de har alle sammen adgang til spisning.
